--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unique-random-string",
-  "version": "0.01.0",
-  "description": "A module that returns unique alphanumeric strings",
+  "name": "unique-random-values-generator",
+  "version": "1.01.0",
+  "description": "A module that returns unique numbers and alphanumeric strings",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,11 @@
     "unique",
     "random",
     "string",
+    "numbers",
+    "number",
+    "random-number",
+    "random-number",
+    "randomnumbers",
     "string-dandom",
     "stringrandom",
     "randomstring",
